ocaml/testsuite/tests/parsing/pr6604_2.compilers.reference
File "pr6604_2.ml", line 9, characters 1-3:
9 |  #1 "pr6604.ml"
     ^^
Error: Syntax error: line number directive not expected.
